--- a/Group 18 - Personal Portfolio Website/index.html
+++ b/Group 18 - Personal Portfolio Website/index.html
@@ -376,27 +376,18 @@
                 <div class="col-md-8">
                     <div class="contact-form">
                         <h1>Contact Me</h1> <br>
-                        <div id="success"></div>
-                        <form name="contactForm" id="contactForm" novalidate="novalidate">
+                        <form name="contactForm" id="contactForm">
                             <div class="control-group">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name" required="required"
-                                    data-validation-required-message="Please enter your name"/>
-                                <p class="help-block"></p>
+                                <input type="text" class="form-control" id="name" placeholder="Your Name" required="required"/><br>  
                             </div>
                             <div class="control-group">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email" required="required"
-                                    data-validation-required-message="Please enter your email"/>
-                                <p class="help-block"></p>
+                                <input type="email" class="form-control" id="email" placeholder="Your Email" required="required"/><br>  
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required"
-                                    data-validation-required-message="Please enter a subject"/>
-                                <p class="help-block"></p>
+                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required"/><br> 
                             </div>
                             <div class="control-group">
-                                <textarea class="form-control" id="message" placeholder="Message" required="required"
-                                    data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block"></p>
+                                <textarea class="form-control" id="message" placeholder="Message" required="required"></textarea>
                             </div>
                             <div>
                                 <button class="btn" type="button" id="sendMessageButton" onclick="sendMessage()">Send Message</button>
